force-app/main/default/objects/Contract_Payment_request__c.object
<CustomObject>
    <description>Custom object to track payment information related to a non-real estate contract.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contract_Number__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_1__c</fullName>
        <inlineHelpText>If there is an Activity associated with the payment, enter the 6 digit Activity number.</inlineHelpText>
        <label>1)  Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_2__c</fullName>
        <inlineHelpText>If there is an Activity associated with the payment, enter the 6 digit Activity number.</inlineHelpText>
        <label>2) Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_3__c</fullName>
        <inlineHelpText>If there is an Activity associated with the payment, enter the 6 digit Activity number.</inlineHelpText>
        <label>3)  Activity</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Payment Requests</relationshipLabel>
        <relationshipName>Contract_Payment_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Number_hidden__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up created to add cross object field updates. May be used by API???</description>
        <label>XDeprecated: Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Payment Requests (Contract Number)</relationshipLabel>
        <relationshipName>Contract_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Payment_Reminder_Date__c</fullName>
        <description>When a contract payment is submitted for approval the current date will automatically be entered into this field and it will serve as the &quot;trigger&quot; date for contract payment reminder time-based workflow.</description>
        <label>Contract Payment Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DirectorFinanceOperations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Finance &amp; Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_of_Conservation_Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director of Conservation Programs</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_RequestsnDfc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_of_Real_Estate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XDepDirector of Conservation Investments</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000055LRqEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Grants__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance/Grants</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <formula>TEXT(Contract_Number__r.Financial_Account_Number__c)</formula>
        <label>Financial Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Picklist__c</fullName>
        <description>Global picklist created to remove from contract level and put selection on payment level.</description>
        <inlineHelpText>Select the first Financial Account number to which this payment or income should be applied (if applicable). Ex: Sometimes our lease payments include electricity or other office improvements (e.g. 540500 lease v. 5411 office remodeling, utilities).</inlineHelpText>
        <label>1) Financial Account Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Account_Number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Origin_2__c</fullName>
        <description>Please select the location where the contract work took place.</description>
        <inlineHelpText>Please select the location where the contract work took place.</inlineHelpText>
        <label>Geo Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK	Alaska</fullName>
                </value>
                <value>
                    <fullName>AL	Alabama</fullName>
                </value>
                <value>
                    <fullName>AR	Arkansas</fullName>
                </value>
                <value>
                    <fullName>AZ	Arizona</fullName>
                </value>
                <value>
                    <fullName>CA	California</fullName>
                </value>
                <value>
                    <fullName>CO	Colorado</fullName>
                </value>
                <value>
                    <fullName>CT	Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC	District Of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE	Delaware</fullName>
                </value>
                <value>
                    <fullName>FL	Florida</fullName>
                </value>
                <value>
                    <fullName>GA	Georgia</fullName>
                </value>
                <value>
                    <fullName>HI	Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA	Iowa</fullName>
                </value>
                <value>
                    <fullName>ID	Idaho</fullName>
                </value>
                <value>
                    <fullName>IL	Illinois</fullName>
                </value>
                <value>
                    <fullName>IN	Indiana</fullName>
                </value>
                <value>
                    <fullName>KS	Kansas</fullName>
                </value>
                <value>
                    <fullName>KY	Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA	Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA	Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MD	Maryland</fullName>
                </value>
                <value>
                    <fullName>ME	Maine</fullName>
                </value>
                <value>
                    <fullName>MI	Michigan</fullName>
                </value>
                <value>
                    <fullName>MN	Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO	Missouri</fullName>
                </value>
                <value>
                    <fullName>MS	Mississippi</fullName>
                </value>
                <value>
                    <fullName>MT	Montana</fullName>
                </value>
                <value>
                    <fullName>NC	North Carolina</fullName>
                </value>
                <value>
                    <fullName>ND	North Dakota</fullName>
                </value>
                <value>
                    <fullName>NE	Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Please enter in the invoice number.  If the invoice does not have a number provided, please enter in the date as the invoice number in the following format:  MMDDYY (no dashes or spaces).</inlineHelpText>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Amount__c</fullName>
        <label>Invoice Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Allocated_BR__c</fullName>
        <description>Sum of amount allocated fields divided by the sum of the final payment amount plus the total amendment amount presented as a percentage. Idea is to say the total percentage of the contract that is being paid out in this payment request.</description>
        <formula>TEXT((ROUND((X1_Amount_Allocated__c + X2_Amount_Allocated__c + X3_Amount_Allocated__c) / (Contract_Number__r.Final_Payment_Amount__c+ Contract_Number__r.Total_Amendment_Amount__c ) , 2))*100) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total % Allocated (BR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Allocated_CA__c</fullName>
        <description>Sum of amount allocated fields divided by the sum of the original contract amount plus the total amendment amount presented as a percentage. Idea is to say the total percentage of the contract that is being paid out in this payment request.</description>
        <formula>TEXT((ROUND((X1_Amount_Allocated__c + X2_Amount_Allocated__c + X3_Amount_Allocated__c) / (Contract_Number__r.Original_Contract_Amount__c + Contract_Number__r.Total_Amendment_Amount__c ) , 2))*100) &amp; &quot;%&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total % Allocated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Allocated_RO_BR__c</fullName>
        <formula>ROUND(Total_Amount_Allocated_1_3__c /  (Contract_Number__r.Final_Payment_Amount__c +  Contract_Number__r.Total_Amendment_Amount__c), 2)</formula>
        <label>XDeprecated:Invoice Total % Allocated RO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Allocated_RO_CA__c</fullName>
        <formula>ROUND(Total_Amount_Allocated_1_3__c / (Contract_Number__r.Original_Contract_Amount__c  +  Contract_Number__r.Total_Amendment_Amount__c ) , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated:Invoice Total % Allocated RO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Amount_Allocated__c</fullName>
        <formula>X1_Amount_Allocated__c  +  X2_Amount_Allocated__c  +  X3_Amount_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Land_Program_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If necessary, include the name of the Land Program Director to approve.</inlineHelpText>
        <label>Land Program Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_RequestsCjZ7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lock_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is checked, the “Admin Override” approval process is launched. The approval process locks the record and unchecks the ‘Lock Record’ checkbox (so that it can easily be locked again), but does not change the status. This field is only visible to Administrators.</description>
        <inlineHelpText>Admin only field. Locks the record without changing the status. This box will not stay checked after the process runs, so if you need to re-lock the record again at a later date, you can.</inlineHelpText>
        <label>Lock Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Name__c</fullName>
        <formula>Contract_Number__r.Master_Contract_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Number__c</fullName>
        <formula>Contract_Number__r.Master_Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the operations representative who processes vendor payment requests in your region.</inlineHelpText>
        <label>Operations</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00e30000001ookuAAA</value>
            </filterItems>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00ea0000001p0phAAA</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the &quot;Other&quot; if an additional person who does not fit the following titles is required to review the contract.</inlineHelpText>
        <label>Other</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Description__c</fullName>
        <label>Payment Request Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Router__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request Router</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Request_Status__c</fullName>
        <label>Payment Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Director_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director/Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related Project and Award ID. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the project and select the project name.</inlineHelpText>
        <label>1) Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is no longer active.  Please contact your Finance coordinator.</errorMessage>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contract Payment Requests</relationshipLabel>
        <relationshipName>Contract_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2)  Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an &quot;active&quot; Project ID.</errorMessage>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contract Payment Requests (2)  Project ID)</relationshipLabel>
        <relationshipName>Contract_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_ID_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3)  Project/Award ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an &quot;active&quot; Project ID.</errorMessage>
            <filterItems>
                <field>Project_IDs__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Contract Payment Requests (3)  Project ID)</relationshipLabel>
        <relationshipName>Contract_Payment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Class__c</fullName>
        <label>QuickBooks Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Clean, Restore Ditches</fullName>
                </value>
                <value>
                    <fullName>Clean Seepage + Boils</fullName>
                </value>
                <value>
                    <fullName>Control Vegetation</fullName>
                </value>
                <value>
                    <fullName>Corn</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Environmental Doc + Permit App</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Planning and Design</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Project Mgmt Admin + Reporting</fullName>
                </value>
                <value>
                    <fullName>DWR Phase 1 – Stakeholder Outreach</fullName>
                </value>
                <value>
                    <fullName>Elevator</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Exterm. Rodents + Repair Damage</fullName>
                </value>
                <value>
                    <fullName>Housing/Building</fullName>
                </value>
                <value>
                    <fullName>Levee Profiles + Cross Section</fullName>
                </value>
                <value>
                    <fullName>Mill Repair</fullName>
                </value>
                <value>
                    <fullName>Non Crop</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Overhead</fullName>
                </value>
                <value>
                    <fullName>Pasture</fullName>
                </value>
                <value>
                    <fullName>Plan for Flood Emergencies</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Ranch Overhead</fullName>
                </value>
                <value>
                    <fullName>RD 38 P.Install + Maintenance of Levee Gates</fullName>
                </value>
                <value>
                    <fullName>RD 38 Special Projects 5 year plan</fullName>
                </value>
                <value>
                    <fullName>Remove, Modify encroachments</fullName>
                </value>
                <value>
                    <fullName>Remove Drift dep, litter, debris</fullName>
                </value>
                <value>
                    <fullName>Rep + Shape Patrol + Acc. Roads</fullName>
                </value>
                <value>
                    <fullName>Repair, Restore Waterside Slop</fullName>
                </value>
                <value>
                    <fullName>Repair Minor Seepage, Erosion</fullName>
                </value>
                <value>
                    <fullName>Routine Inspection of Levees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quickbooks_Class_Global__c</fullName>
        <description>GLobal picklist for Quickbooks classes</description>
        <label>Quickbooks_Class_Global</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quickbooks_Class</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RO_Project_ID_Award_1__c</fullName>
        <formula>Project_ID_1__r.Name</formula>
        <label>XDeprecateProject ID &amp; Award Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Project_ID_Award_2__c</fullName>
        <formula>Project_ID_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecateProject ID &amp; Award Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Project_ID_Award_3__c</fullName>
        <formula>Project_ID_3__r.Name</formula>
        <label>XDeprecateProject ID &amp; Award Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RO_Total_Allocated_1__c</fullName>
        <formula>X1_Amount_Allocated__c  /  Invoice_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecate: Total % Allocated Project 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RO_Total_Percent_Allocated_2__c</fullName>
        <formula>X2_Amount_Allocated__c / Invoice_Payment_Amount__c</formula>
        <label>XDeprecate: Total % Allocated Project 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RO_Total_Percent_Allocated_3__c</fullName>
        <formula>X3_Amount_Allocated__c / Invoice_Payment_Amount__c</formula>
        <label>XDeprecate: Total % Allocated Project 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Re_Lock_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to schedule the record for re-locking after a user has requested that the record be unlocked. It will automatically re-lock itself after 5 days.</inlineHelpText>
        <label>Re-Lock Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000004nmjmEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Science__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Science</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Payment_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <inlineHelpText>Please include special instructions as necessary, such as &quot;Fedex check overnight&quot;, or &quot;Mail check back to my attention at address...&quot;</inlineHelpText>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000004nmjhEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Agreement_Number__c</fullName>
        <formula>Contract_Number__r.Sub_Agreement_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_1_3__c</fullName>
        <description>Sum of portion of the total invoice payment amount that is allocated to each project id. Why is this necessary? We have the validation rule to fire if the total invoice amount and total amounts allocated do not equal the same amount. I think we can just deprecate this and the fields that are used to populate it.</description>
        <formula>RO_Total_Allocated_1__c  +  RO_Total_Percent_Allocated_2__c  +  RO_Total_Percent_Allocated_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated: Total % Allocated 1-3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Allocated_1_3__c</fullName>
        <description>Not necessary, dupe of the &quot;Invoice Total Amount Allocated&quot; field</description>
        <formula>X1_Amount_Allocated__c  +  X2_Amount_Allocated__c  +  X3_Amount_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecated: Total Amount Allocated 1-3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Activity_Associated_with_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there is an activity associated with this payment.  If N/A, leave unchecked.</inlineHelpText>
        <label>1) Activity Associated with Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Amount_Allocated__c</fullName>
        <description>Only required on TNC payment requests. Not for Bird Returns, CF&amp;R or RD.</description>
        <inlineHelpText>This field is required. The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Invoice Payment Amount” that is entered above.</inlineHelpText>
        <label>1)  Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Do Not Delete, important for old contracts, but not used anymore in current contracts. 4/18/2016</description>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related budget center number and sub. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the budget center and select the name of the budget center under the &quot;Center Record ID&quot; column.</inlineHelpText>
        <label>XOld: 1.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Contract Payment Requests</relationshipLabel>
        <relationshipName>Contract_Payment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_Activity_Associated_with_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there is an activity associated with this payment.  If N/A, leave unchecked.</inlineHelpText>
        <label>2) Activity Associated with Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_Amount_Allocated__c</fullName>
        <inlineHelpText>The sum of 1) Amount Allocated, 2) Amount Allocated, and 3) Amount Allocated must equal the “Invoice Payment Amount” that is entered above.</inlineHelpText>
        <label>2)  Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Budget_Center_Name_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Do Not Delete, important for old contracts, but not used anymore in current contracts. 4/18/2016</description>
        <inlineHelpText>Select the &quot;Look Up&quot; icon to search for the related budget center number and sub. Use the &quot;Search&quot; or &quot;Filters&quot; to locate the budget center and select the name of the budget center under the &quot;Center Record ID&quot; column.</inlineHelpText>
        <label>XOld: 2.) Budget Center Name &amp; Number</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The cost center you have searched for is no longer active or you have submitted an invalid entry. Please consult with your Finance or Operations department for questions.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipLabel>Contract Payment Requests (2.) Budget Center Name &amp; Number)</relationshipLabel>
        <relationshipName>Contract_Payment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2_Financial_Account_Picklist__c</fullName>
        <description>Sometimes there are multiple account types in one payment. An example is for our lease payments that sometimes including electricity or other office improvements (e.g. 540500 lease v. 5411 office remodeling, utilities).</description>
        <inlineHelpText>Select the second Financial Account number to which this payment or income should be applied (if applicable). Ex: Sometimes our lease payments include electricity or other office improvements (e.g. 540500 lease v. 5411 office remodeling, utilities).</inlineHelpText>
        <label>2) Financial Account Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financial_Account_Number</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3_Activity_Associated_with_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check the box if there is an activity associated with this payment.  If N/A, leave unchecked.</inlineHelpText>
        <label>3) Activity Associated with Payment?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>